{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 45,
  "lineage": "b7f0b1d7-3480-3a86-dd97-80fe5a028317",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052c08d70def0ac62",
            "arn": "arn:aws:ec2:ap-south-1:393252101578:instance/i-0a3e7de41af30a12a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdb",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0e5149d9de89e051e",
                "volume_size": 10,
                "volume_type": "standard"
              },
              {
                "delete_on_termination": false,
                "device_name": "/dev/xvdc",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-026ab894741dad230",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3e7de41af30a12a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev26",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c1bd16844e85b203",
            "private_dns": "ip-172-31-37-137.ap-south-1.compute.internal",
            "private_ip": "172.31.37.137",
            "public_dns": "ec2-13-235-132-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.132.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-08ba799945b02fb70",
                "volume_size": 10,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "WebSrv"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a090a4c8",
            "tags": {
              "Environment": "Test",
              "Name": "example-web"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "example-web-disk01"
            },
            "vpc_security_group_ids": [
              "sg-0950fe92310545fa2"
            ]
          },
          "dependencies": [
            "aws_security_group.web-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:393252101578:security-group/sg-0950fe92310545fa2",
            "description": "Web Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0950fe92310545fa2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebSrv",
            "name_prefix": null,
            "owner_id": "393252101578",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-cf424ca7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "Https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1078076402",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0950fe92310545fa2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web-node"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "MySql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1537599397",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0950fe92310545fa2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.web-node"
          ]
        }
      ]
    }
  ]
}